Fixed last item on mobile and adding basic closing

--- a/themes/default/css/chocolate.less
+++ b/themes/default/css/chocolate.less
@@ -63,7 +63,7 @@
     .choco-slider {
       transition: none;
       &.animated {
-        transition: transform 0.2s;
+        transition: transform 0.2s, opacity 2s;
       }
     }
   }
